add nav bar to all pages (should probably remove it from the view grapht and view suite pages)

--- a/graphtool/css/opsgraph.css
+++ b/graphtool/css/opsgraph.css
@@ -52,3 +52,43 @@
         }
 
 
+/* Navbar */
+
+body {
+    font-family:Verdana, Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color:#333333;
+    padding: 5px;
+    }
+
+ul.menu_tabbed{
+    list-style: none;
+    border-bottom: 1px #999999 solid;
+    padding-bottom: 5px;
+    }
+
+ul.menu_tabbed li {
+    display: inline;
+    margin-right: 5px;
+    }
+
+ul.menu_tabbed li a {
+    color:#999999;
+    text-decoration: none;
+    background: #f7f7f7;
+    border: 1px #CCCCCC solid;
+    border-bottom: none;
+    padding: 5px 9px;
+    }
+
+ul.menu_tabbed li a:hover {
+    padding: 9px 9px 5px 9px;
+    }
+
+ul.menu_tabbed li a.selected {
+    color:#666666;
+    background:#FFFFFF;
+    border: 1px #999999 solid;
+    border-bottom: 1px #FFFFFF solid;
+    padding: 9px 9px 5px 9px;
+    }
