--- a/graphtool/css/opsgraph.css
+++ b/graphtool/css/opsgraph.css
@@ -56,7 +56,7 @@
 
 body {
     font-family:Verdana, Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 10px;
     color:#333333;
     padding: 5px;
     }
@@ -73,7 +73,7 @@ ul.menu_tabbed li {
     }
 
 ul.menu_tabbed li a {
-    color:#999999;
+    color:#666666;
     text-decoration: none;
     background: #f7f7f7;
     border: 1px #CCCCCC solid;
@@ -83,6 +83,8 @@ ul.menu_tabbed li a {
 
 ul.menu_tabbed li a:hover {
     padding: 9px 9px 5px 9px;
+    font-weight: bold;
+    background: #f0f0f0
     }
 
 ul.menu_tabbed li a.selected {
