Add row highlighting for series rows in the build a graph page to make it easier to determine which remove button to press
Addresses IOPSGRAPH-71

--- a/graphtool/css/opsgraph.css
+++ b/graphtool/css/opsgraph.css
@@ -94,3 +94,6 @@ ul.menu_tabbed li a.selected {
     border-bottom: 1px #FFFFFF solid;
     padding: 9px 9px 5px 9px;
     }
+    
+/* Enable shade on hover for table rows with seriesId data */
+tr:hover[id^="seriesId"] {background-color:yellow;}
